# food-data-telegram-bot

./: .env.example  .gitignore  bot.py  food_data.py  models.py  pyproject.toml
