[tool.poetry]
name = "food_data_bot"
version = "0.1.0"
description = "Telegram bot for FoodData Central calculating food nutrients"
authors = ["Aidar Garikhanov <a1d4r@yandex.ru>"]

[tool.poetry.dependencies]
python = "3.10.2"
pydantic = "^1.9.0"
aiogram = "^2.19"

[tool.poetry.dev-dependencies]
datamodel-code-generator = {extras = ["http"], version = "^0.11.19"}
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
